# sakugabooru-bot

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  trial.py
